Jenkins/jenkins-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: jenkins-nginx
  name: jenkins-nginx-service
spec:
  ports:
    - name: "9000"
      port: 9000
      targetPort: 9000
  selector:
    io.kompose.service: jenkins-nginx
  type: LoadBalancer
status:
  loadBalancer: {}
