Jenkins/kubernetes-jenkins-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: kubernetes-jenkins
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/kubernetes-jenkins: "true"
  podSelector:
    matchLabels:
      io.kompose.network/kubernetes-jenkins: "true"
